# lineage-tracking

./: .dockerignore  .gitignore  DOCUMENTATION.md  QUICK_START.md  README.md  docker-compose.yml  docker-start.sh  package.json  test-connections.sh
backend-python/: .dockerignore  .gitignore  Dockerfile  check_postgres.py  main.py  pyproject.toml  requirements.txt
backend-python/config/: __init__.py  database.py
backend-python/models/: __init__.py  migration.py  schema.py
backend-python/routes/: __init__.py  auth_routes.py  migration_routes.py  query_routes.py  s3_routes.py
backend-python/services/: __init__.py  clickhouse_service.py  dask_service.py  duckdb_service.py  history_service.py  keycloak_service.py  mapping_service.py  migration_service.py  minio_service.py  postgres_service.py
backend-python/utils/: __init__.py  type_mapper.py
frontend/: .dockerignore  .gitignore  Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
frontend/src/: App.vue  vite-env.d.ts
frontend/src/api/: index.ts
frontend/src/layouts/: AuthLayout.vue  MainLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: migration.ts  query.ts
frontend/src/views/: HistoryView.vue  LoginView.vue  MigrationView.vue  QueryView.vue  S3ExplorerView.vue
